--- a/public/app/basics/basics.html
+++ b/public/app/basics/basics.html
@@ -3,14 +3,18 @@
     <aside class="col-xs-3">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h1 class="panel-title">SASS Basics</h1>
+                <h1 class="panel-title">Sass Basics</h1>
             </div>
             <nav class="panel-body">
             <ol class="nav nav-pills nav-stacked">
-                <li data-ui-sref-active="active"><a data-ui-sref="basics.basic({basicName:'variables'})">1 Variables</a></li>
-                <li data-ui-sref-active="active"><a data-ui-sref="basics.basic({basicName:'mixins'})">2 Mixins</a></li>
-                <li data-ui-sref-active="active"><a data-ui-sref="basics.basic({basicName:'nesting'})">3 Nesting</a></li>
-                <li data-ui-sref-active="active"><a data-ui-sref="basics.basic({basicName:'extend'})">4 Extend</a></li>
+                <li data-ui-sref-active="active"><a data-ui-sref="basics.basic({basicName:'partials'})">Partials &amp; Importing</a></li>
+                <li data-ui-sref-active="active"><a data-ui-sref="basics.basic({basicName:'variables'})">Variables</a></li>
+                <li data-ui-sref-active="active"><a data-ui-sref="basics.basic({basicName:'operators'})">Operators</a></li>
+                <li data-ui-sref-active="active"><a data-ui-sref="basics.basic({basicName:'functions'})">Functions</a></li>
+                <li data-ui-sref-active="active"><a data-ui-sref="basics.basic({basicName:'nesting'})">Nesting</a></li>
+                <li data-ui-sref-active="active"><a data-ui-sref="basics.basic({basicName:'extend'})">Extend</a></li>
+                <li data-ui-sref-active="active"><a data-ui-sref="basics.basic({basicName:'mixins'})">Mixins</a></li>
+                <li data-ui-sref-active="active"><a data-ui-sref="basics.basic({basicName:'control-logic'})">Control Logic</a></li>
             </ol>
             </nav>
         </div>
@@ -21,4 +25,4 @@
     </section>
 </div>
 
-<p><a data-ui-sref="survey" class="btn btn-default pull-right">Survey &rarr;</a></p>
+<p><a data-ui-sref="bestPractices.bestPractice({bestPracticeName:'partials'})" class="btn btn-default pull-right">Best Practices &rarr;</a></p>
