--- a/public/app/index/index.html
+++ b/public/app/index/index.html
@@ -1,6 +1,6 @@
 <h1>
     <small>Welcome to Tech Crunch Munch</small><br />
-    Tighten Your SASS
+    Tighten Your Sass
 </h1>
 
 <div class="row">
@@ -11,16 +11,14 @@
     <div class="col-xs-8">
         <p>If you have Node.js installed and would like to follow along, run the following commands in your local repository directory:</p>
 
-        <ol class="list-unstyled">
-            <li><code>git remote add upstream https://github.com/icfi-tech-crunch-munch/wcag-in-my-508.git</code></li>
-            <li><code>git pull upstream master</code></li>
-            <li><code>npm install</code></li>
-            <li><code>bower install</code></li>
-            <li><code>npm start</code></li>
-        </ol>
+<pre class="language-bash"><code class="language-bash">git remote add upstream https://github.com/icfi-tech-crunch-munch/tighten-your-sass
+git pull upstream master
+npm install
+bower install
+npm start</code></pre>
 
-        <p>Then visit http://localhost:3000</p>
+        <p>Then visit <a href="http://localhost:3030">http://localhost:3030</a></p>
     </div>
 </div>
 
-<a data-ui-sref="intro-to-sass" class="btn btn-default pull-right">Intro to SASS &rarr;</a>
+<a data-ui-sref="intro-to-sass" class="btn btn-default pull-right">Intro to Sass &rarr;</a>
