--- a/public/app/survey/survey.html
+++ b/public/app/survey/survey.html
@@ -1,1 +1,5 @@
 <h1>Survey</h1>
+
+<p>In the next TCM, Twerk that Sass, we'll be talking about more best practices - with a focus on integrating preprocessors into your project.</p>
+
+<p>Please complete the following survey: <a href="https://www.surveymonkey.com/r/CBV9DM2">https://www.surveymonkey.com/r/CBV9DM2</a></p>
