local instructions fix - change from npm start to node server.js

--- a/public/app/index/index.html
+++ b/public/app/index/index.html
@@ -15,7 +15,7 @@
 git pull upstream master
 npm install
 bower install
-npm start</code></pre>
+node server.js</code></pre>
 
         <p>Then visit <a href="http://localhost:3030">http://localhost:3030</a></p>
     </div>
